<resources>
    <string name="app_name">e-LMTB</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Legal Metrology Trader Bihar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="reg_no">Registration Number *</string>
    <string name="eng_no">Engine Number *</string>
    <string name="firm_own_name">Firm/Owner Name *</string>
    <string name="chechis_number">Chechis Number *</string>
    <string name="country">Country *</string>
    <string name="denomination">Denomination</string>
    <string name="tank_details">Vehicle Tank Details Entry</string>
    <string name="not_avalable">N/A</string>
    <string name="other_than_lmo">Other than LMO Office [ AF change under 17(2) of BLM(E) Rules 14 ]</string>
    <string name="lmo_place">At LMO Office</string>
    <string name="version">Version</string>

</resources>