<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
      <LinearLayout
        android:id="@+id/ll_tank"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:padding="15dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_weight=".8"
                android:layout_height="wrap_content"
                android:text="@string/tank_details"
                android:textSize="20sp"
                android:textStyle="bold"
                android:padding="10dp"
                />
            <RelativeLayout
                android:id="@+id/end_dialog"
                android:layout_width="0dp"
                android:layout_weight=".2"
                android:layout_height="50dp">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/end_dialog"/>
            </RelativeLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"/>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            >

            <EditText
                android:id="@+id/edit_tank_reg_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reg_no"
                android:inputType="textCapWords"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>







        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            >

            <EditText
                android:id="@+id/edit_tank_eng_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/eng_no"
                android:inputType="numberDecimal"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            >

            <EditText
                android:id="@+id/edit_tank_chechis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/chechis_number"
                android:inputType="numberDecimal"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/edit_tank_ow_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/firm_own_name"
                android:inputType="numberDecimal"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            >

            <Spinner
                android:id="@+id/sp_contries"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/rectangle"
                android:padding="3dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:background="@android:color/white"
                android:padding="3dp"
                android:text="@string/country"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />
        </FrameLayout>
        <Button
            android:id="@+id/add_tank"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:layout_marginLeft="5dp"
            android:background="@drawable/green_button"
            android:singleLine="true"
            android:layout_marginTop="10dp"
            android:text="Add Tank" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_tanks"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>