<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".fragments.ApplyNew2Fragment">

    <ScrollView
        android:id="@+id/scroll_od"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="The type of weights and measures used: Weight/Measure/Weighing Instruments/ Measuring Instruments with Details"
                        android:textColor="@color/blue"
                        android:textSize="20sp" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/blue" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Enter Details of Weight/Measure"
                    android:textColor="@android:color/holo_blue_dark" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <Spinner
                        android:id="@+id/sp_proposal_type_f4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:background="@drawable/rectangle"
                        android:padding="3dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="7dp"
                        android:background="@android:color/white"
                        android:padding="3dp"
                        android:text="Proposal Type *"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <Spinner
                        android:id="@+id/sp_cat_f4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:background="@drawable/rectangle"
                        android:padding="3dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="7dp"
                        android:background="@android:color/white"
                        android:padding="3dp"
                        android:text="Category *"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold" />
                </FrameLayout>

                <FrameLayout
                    android:id="@+id/frame_sel_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <Spinner
                        android:id="@+id/sp_sel_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:background="@drawable/rectangle"
                        android:padding="3dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="7dp"
                        android:background="@android:color/white"
                        android:padding="3dp"
                        android:text="Selection Type *"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold" />
                </FrameLayout>
                <LinearLayout
                    android:id="@+id/ll_entry_tank"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/darker_gray"
                    android:padding="10dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20dp"
                        android:textColor="@color/colorPrimaryLight"
                        android:text="@string/tank_details"/>
                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/edit_tank_reg_no"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/reg_no"
                        android:textColorHighlight="@color/colorAccent"
                        android:inputType="text"/>
                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/edit_tank_eng_no"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/eng_no"
                        android:textColorHighlight="@color/colorAccent"
                        android:inputType="text"/>
                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/edit_tank_chechis"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/chechis_number"
                        android:textColorHighlight="@color/colorAccent"
                        android:inputType="text"/>
                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/edit_tank_ow_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHighlight="@color/colorAccent"
                        android:hint="@string/firm_own_name"
                        android:inputType="text"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <FrameLayout
                            android:layout_width="0dp"
                            android:layout_weight=".6"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:orientation="vertical">
                            <androidx.appcompat.widget.AppCompatSpinner
                                android:id="@+id/sp_contries"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                 />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="-7dp"
                                android:layout_marginLeft="10dp"
                                android:padding="2dp"
                                android:background="@color/colorPrimary"
                                android:text="@string/country"
                                android:textColor="@color/white" />
                        </FrameLayout>
                        <Button
                            android:id="@+id/add_tank_detils"
                            android:layout_width="0dp"
                            android:layout_weight=".5"
                            android:layout_height="35dp"
                            android:layout_marginRight="20dp"
                            android:layout_marginLeft="20dp"
                            android:background="@drawable/yellow_button"
                            android:text="Add"
                            android:layout_gravity="bottom"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/ll_min_max"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <FrameLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_weight=".5">

                            <Spinner
                                android:id="@+id/sp_min_den"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="12dp"
                                android:background="@drawable/rectangle"
                                android:padding="3dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="7dp"
                                android:background="@android:color/white"
                                android:padding="3dp"
                                android:text="Min *"
                                android:textColor="@color/colorAccent"
                                android:textStyle="bold" />
                        </FrameLayout>

                        <FrameLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_weight=".5">

                            <Spinner
                                android:id="@+id/sp_max_den"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="12dp"
                                android:background="@drawable/rectangle"
                                android:padding="3dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="7dp"
                                android:background="@android:color/white"
                                android:padding="3dp"
                                android:text="Max *"
                                android:textColor="@color/colorAccent"
                                android:textStyle="bold" />
                        </FrameLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_weight=".5"
                            android:nextFocusDown="@+id/login2">

                            <EditText
                                android:id="@+id/edit_set_no"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="Number Of Set *"
                                android:inputType="textPostalAddress"
                                android:singleLine="true" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <Button
                            android:id="@+id/button_adddenomination"
                            android:layout_width="0dp"
                            android:layout_height="40dip"
                            android:layout_gravity="center_vertical"
                            android:layout_margin="20dp"
                            android:layout_weight=".5"
                            android:background="@drawable/yellow_button"
                            android:text="Add"
                            android:textColor="@android:color/black" />

                    </LinearLayout>
                </LinearLayout>

                <FrameLayout
                    android:id="@+id/ll_single"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:background="@drawable/rectangle">


                    <TextView
                        android:id="@+id/sp_denomination_f4"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="12dp"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="-- Select Denomination --" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="7dp"
                        android:layout_marginTop="-5dp"
                        android:background="@android:color/white"
                        android:padding="3dp"
                        android:text="Denomination *"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold" />
                </FrameLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:nextFocusDown="@+id/password2_te"
                    android:visibility="gone">

                    <EditText
                        android:id="@+id/edit_tin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Quantity *"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <FrameLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_weight=".7"
                        android:visibility="visible">

                        <Spinner
                            android:id="@+id/sp_valid"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:background="@drawable/rectangle"
                            android:padding="3dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="7dp"
                            android:background="@android:color/white"
                            android:padding="3dp"
                            android:text="Validity Years*"
                            android:textColor="@color/colorAccent"
                            android:textStyle="bold" />
                    </FrameLayout>

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".3">

                        <TextView
                            android:id="@+id/text_get_all"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                           android:layout_centerInParent="true"
                            android:background="@drawable/circular_shape"
                            android:gravity="center"
                            android:text="0"
                            android:textColor="@android:color/white"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </RelativeLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/button_next4"
                    android:layout_width="match_parent"
                    android:layout_height="40dip"
                    android:layout_margin="20dp"
                    android:layout_weight=".5"
                    android:background="@drawable/green_button"
                    android:text="Next"
                    android:textColor="@android:color/black" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</RelativeLayout>